# stm32-rs

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs  test.rs
