[package]
authors = ["Ezra Godfrey <ezra.godfrey@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32-rs"
version = "0.1.0"
rust-version = "1.70.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.6.15" # 0.6.15 due to build error
panic-halt = "0.2.0"
stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4x6"]}
si70xx = { path = "../../libs/si70xx" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.4"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
