[package]
authors = ["Ezra Godfrey <ezra.godfrey@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32-rs"
version = "0.1.0"
rust-version = "1.70.0"

[dependencies]
cortex-m = "0.7.*"
cortex-m-rt = "0.7.*"
cortex-m-semihosting = "0.5.*"
panic-halt = "0.2.*"
stm32l4xx-hal = { version = "0.7.*", features = ["stm32l476"]}
si70xx = { version = "0.3.*", path = "../../libs/si70xx" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.4"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
